--- a/Phase 3 Project.ipynb
+++ b/Phase 3 Project.ipynb
@@ -2465,6 +2465,27 @@
    "source": [
     "I will settle with the Decision Tree Classifier since it has the highest testing accuracy, in comparison with the other models, it also has the highest area under the curve. This will be the best model to predict the customers to drop off soon."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Recommendation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "1. Allowing us to look closely into the poorly performing states and Identify whether the network coverage performance and if network coverage is off, we strategize on how to work on having more boosters in the state.<br>\n",
+    "\n",
+    "2. We will examine whether a more favorable international charge will make the customers consider SyriaTel's international plan while they are traveling.<br>\n",
+    "\n",
+    "3. We would like to consider using a different vendor or temporally partnering to offer incentives and promotions when a customer seems dissatisfied may increase satisfaction and reduce churning.<br>\n",
+    "\n",
+    "4. Ultimately, we will implement the new features to see whether churning was reduced and calculate the cost of retaining the customers."
+   ]
   }
  ],
  "metadata": {
